samples/_failures_safe/1761510593_958e51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_180e310a.c: In function ‘main’:
./samples/SAFE/__tmp_180e310a.c:153:9: error: expected expression at end of input
  153 |         path_end <
      |         ^~~~~~~~
./samples/SAFE/__tmp_180e310a.c:153:9: error: expected declaration or statement at end of input
